--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "fitbit": {
-    "appUUID": "693dcee6-9c8a-4fa8-898b-7c6c993d6ac1",
-    "appType": "app",
-    "appDisplayName": "KiezelPay",
+    "appType": "clockface",
+    "appDisplayName": "K-Pay",
     "iconFile": "resources/icon.png",
     "wipeColor": "#009688",
     "requestedPermissions": [
@@ -10,19 +9,17 @@
     ],
     "buildTargets": [
       "higgs",
-      "meson"
+      "meson",
+      "gemini"
     ],
     "i18n": {
       "en": {
-        "name": "KiezelPay"
+        "name": "K-Pay"
       }
-    }
+    },
+    "defaultLanguage": "en-US"
   },
   "devDependencies": {
-    "@fitbit/sdk": "~1.0.0",
-    "@fitbit/sdk-cli": "^1.0.0"
-  },
-  "scripts": {
-    "build": "fitbit-build"
+    "@fitbit/sdk": "~3.1.0"
   }
 }
